Cambio al html y nuevo global.css

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
      <script type="text/javascript" src="temperature.js"></script>
   </head>
   <body>
+    <div id="primero"></div>
     <h1>Conversor de temperaturas</h1>
     <table>
       <tr>
