--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
      <script type="text/javascript" src="temperature.js"></script>
   </head>
   <body>
-    <div id="primero"></div>
     <h1>Conversor de temperaturas</h1>
+    <div id="primero"></div>
     <table>
       <tr>
-        <th> Inserte temperatura (examples: 32F, 45C, -2.5f):</th>
+        <th> Inserte temperatura (ejemplos : 32F, 45C, -2.5f):</th>
         <td><input id="original" autofocus onchange="calculate();" placeholder="32F" size="50"></td>
       </tr>
       <tr>
