--- a/pattern.html
+++ b/pattern.html
@@ -6,11 +6,11 @@
 <style type="text/css">
 #contenedor {
      width:500px;
-   margin:0 auto;
-   padding-top:80px;
-      font-family: Arial, Helvetica, Sans-serif;
-    font-size:12px;
-    color:#999;
+     margin:0 auto;
+     padding-top:80px;
+     font-family: Arial, Helvetica, Sans-serif;
+     font-size:12px;
+     color:#999;
 }
 </style>
 </head>
@@ -18,11 +18,8 @@
   <div id="contenedor">
     <form>
       <fieldset>
-        <p><label>Caracteres alfanuméricos:</label><input type="text" pattern="[a-zA-Z0-9]+" /></p>
-        <p><label>Letras:</label><input type="text" pattern="[a-zA-Z]+" /></p>
-        <p><label>Números:</label><input type="text" pattern="[0-9]+" /></p>
-        <p><label>Fecha (dd/mm/YYYYYY):</label><input type="text" pattern="(0[1-9]|[12][0-9]|3[01])[- /.](0[1-9]|1[012])[- /.](19|20)\d\d" /></p>
-        <p><label>Email:</label><input type="text" pattern="[a-zA-Z0-9.+_-]+@[a-zA-Z0-9.-]+\.[a-zA-Z0-9.-]+" /></p>
+        <p><label>Introduzca la temperatura : </label><input type="text" pattern="^\s*([-+]?\d+(?:\.\d*)?)(?:([eE])[+-]?(\d)+)?\s*(f|fa|far|fare|faren|farenh|farenhe|farenheit|c|ce|cel|cels|celsi|celsiu|celsius)\s*$";
+" /></p>
         <input id="final" type="submit" value="Aceptar" />
       </fieldset>
     </form>
