--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         <th>Enter  Temperature (examples: 32F, 45C, -2.5f):</th>
         <td>
           <form id="formulario" onsubmit="calculate();">
-          <input id="original" 
-                 placeholder="32F" 
+          <input id="original"
+                 placeholder="32F"
                  size="50"
                  title = "Escribe un número seguido de una de las letras 'F' o 'C'"
-                 pattern="([-+]?\d+(?:\.\d*)?)\s*([fFcC])"
+                 pattern="^\s*([-+]?\d+(?:\.\d*)?)(?:([eE])[+-]?(\d)+)?\s*(f|fa|far|fare|faren|farenh|farenhe|farenheit|c|ce|cel|cels|celsi|celsiu|celsius)\s*$"
           />
           </form>
         </td>
