Cambio en pattern

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                  placeholder="32F"
                  size="50"
                  title = "Escribe un número seguido de una de las letras 'F' o 'C'"
-                 pattern="^\s*([-+]?\d+(?:\.\d*)?)(?:([eE])[+-]?(\d)+)?\s*(f|fa|far|fare|faren|farenh|farenhe|farenheit|c|ce|cel|cels|celsi|celsiu|celsius)\s*$"
+                 pattern="/^\s*([-+]?\d+(?:\.\d*)?)(?:(e)[+-]?(\d)+)?(f|fa|far|fare|faren|farenh|farenhe|farenheit|c|ce|cel|cels|celsi|celsiu|celsius)\s*$/i"
           />
           </form>
         </td>
